manifests/well-known-handler/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: well-known-handler
  namespace: matrix
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: well-known-handler
  sessionAffinity: None
  type: ClusterIP
