manifests/well-known-handler/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: well-known-handler
  namespace: matrix
spec:
  host: matrix-matrix.apps.vrutkovs-2.devcluster.openshift.com
  path: /.well-known/matrix/server
  port:
    targetPort: 8000
  subdomain: ""
  tls:
    termination: edge
  to:
    kind: Service
    name: well-known-handler
    weight: 100
  wildcardPolicy: None
